@@ -1,0 +1,7 @@
+<html><body>
+To open a new, floating, instance of a docked window, right-click on the strip
+of buttons in the docking area, and select the dockable from the
+<b>New Floating Instance</b> menu in the popup that appears.<p>
+
+You can use this to open multiple file system browsers at once, for example.
+</body></html>
